apps/lidarr/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: lidarr
spec:
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:latest
        ports:
        - containerPort: 9696
        volumeMounts:
        - name: prowlarr-config
          mountPath: /config
      volumes:
      - name: prowlarr-config
        hostPath:
          path: /mnt/das-storage/prowlarr/config
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
  namespace: lidarr
spec:
  selector:
    app: prowlarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9696
