apps/lidarr/lidarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr-ingress
  namespace: lidarr
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - lidarr
  rules:
  - host: lidarr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lidarr-service
            port:
              number: 80
