apps/lidarr/qbittorrent-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: lidarr
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - qbittorrent
  rules:
  - host: qbittorrent
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent-service
            port:
              number: 80
